fixes letter spacing of topbar for mobile

--- a/public/stylesheets/coffee_shop.css
+++ b/public/stylesheets/coffee_shop.css
@@ -152,3 +152,8 @@ li {
   font-weight: bold;
   font-size: 30px;
 }
+
+@media only screen and (max-width: 40em) {
+  .bar-text {
+    letter-spacing: 2px;
+  }
